# mcpapps-bridge

./: .gitignore  README.md  justfile  mcpapps-bridge.yaml.example
backend/: README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_persistence.py  0002_immutable_topology_revisions.py
backend/src/mcpapps_bridge/: __init__.py  bootstrap.py  debug_main.py  main.py
backend/src/mcpapps_bridge/api/: __init__.py  app.py
backend/src/mcpapps_bridge/config/: __init__.py  loader.py  models.py
backend/src/mcpapps_bridge/domain/: __init__.py  revisions.py  sessions.py  topology.py
backend/src/mcpapps_bridge/events/: __init__.py  models.py
backend/src/mcpapps_bridge/host/: __init__.py  runtime.py
backend/src/mcpapps_bridge/logging/: __init__.py  _setup.py
backend/src/mcpapps_bridge/mcp/: __init__.py  builder.py  downstream.py  handlers.py  manager.py  mapper.py  proxy.py  router.py  runtime.py  upstream.py
backend/src/mcpapps_bridge/models/: __init__.py  protocol.py
backend/src/mcpapps_bridge/persistence/: __init__.py  database.py  models.py  repositories.py  session_store.py  topology_store.py
backend/src/mcpapps_bridge/repositories/: __init__.py  memory.py  protocols.py  topology.py
backend/src/mcpapps_bridge/session/: __init__.py  factory.py  memory.py  protocol.py  state.py
backend/src/mcpfront_bridge/: __init__.py  main.py
backend/src/mcpfront_bridge/agent_adapters/: __init__.py
backend/src/mcpfront_bridge/api/: __init__.py  app.py
backend/tests/: test_upstream_runtime.py
scripts/: dev.py
(+31 files in other folders)
