[project]
name = "mcpapps-bridge"
version = "0.1.0"
description = "Backend bridge host for MCP Apps-enabled agent runtimes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anyio>=4.4.0",
  "fastapi>=0.115.0",
  "mcp>=1.10.0",
  "pydantic>=2.8.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pyright>=1.1.390",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpapps_bridge"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
